--- a/package.json
+++ b/package.json
@@ -6,28 +6,26 @@
   "devDependencies": {
     "@types/jest": "^25.1.4",
     "babel-eslint": "^10.1.0",
-    "copy-webpack-plugin": "^5.1.1",
-    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
-    "jest": "^25.1.0",
     "prettier": "^1.19.1",
-    "ts-jest": "^25.2.1",
-    "ts-loader": "^6.2.1",
     "typescript": "^3.8.3",
     "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-cli": "^3.3.11"
   },
   "scripts": {
     "build": "webpack",
     "dev": "webpack-dev-server"
   },
   "dependencies": {
-    "phaser": "^3.22.0"
+    "copy-webpack-plugin": "^5.1.1",
+    "eslint": "^6.8.0",
+    "phaser": "^3.22.0",
+    "ts-loader": "^6.2.1",
+    "webpack-dev-server": "^3.10.3"
   }
 }
