--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^25.1.4",
+    "@types/node": "^13.9.2",
+    "@types/source-map-support": "^0.5.1",
     "babel-eslint": "^10.1.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.10.0",
@@ -12,14 +14,20 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
+    "jest": "^25.1.0",
+    "onchange": "^6.1.0",
     "prettier": "^1.19.1",
+    "serve": "^11.3.0",
+    "source-map-support": "^0.5.16",
+    "ts-jest": "^25.2.1",
     "typescript": "^3.8.3",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
   },
   "scripts": {
     "build": "webpack",
-    "dev": "webpack-dev-server"
+    "dev": "webpack-dev-server",
+    "test": "jest --coverage"
   },
   "dependencies": {
     "copy-webpack-plugin": "^5.1.1",
