--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "^6.8.0",
     "phaser": "^3.22.0",
     "ts-loader": "^6.2.1",
+    "uuid": "^7.0.2",
     "webpack-dev-server": "^3.10.3"
   }
 }
