--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "test": "jest --coverage"
   },
   "dependencies": {
+    "@types/uuid": "^7.0.2",
     "copy-webpack-plugin": "^5.1.1",
     "eslint": "^6.8.0",
     "phaser": "^3.22.0",
