--- a/client/package.json
+++ b/client/package.json
@@ -37,5 +37,8 @@
     "ts-loader": "^6.2.1",
     "uuid": "^7.0.2",
     "webpack-dev-server": "^3.10.3"
+  },
+  "engines": {
+    "node": "13.x"
   }
 }
