--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "start": "npm run clean && npm run build && npm run compilecopystatic && node ./dist/index.js"
   },
   "dependencies": {
+    "webpack-cli": "^3.3.11",
     "@types/uuid": "^7.0.2",
     "cookie-parser": "^1.4.5",
     "copy-webpack-plugin": "^5.1.1",
