--- a/package.json
+++ b/package.json
@@ -22,10 +22,7 @@
     "prettier": "^1.19.1",
     "serve": "^11.3.0",
     "source-map-support": "^0.5.16",
-    "ts-jest": "^25.2.1",
-    "typescript": "^3.8.3",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "ts-jest": "^25.2.1"
   },
   "scripts": {
     "build": "webpack",
@@ -36,6 +33,8 @@
     "start": "npm run clean && npm run build && npm run compilecopystatic && node ./dist/index.js"
   },
   "dependencies": {
+    "typescript": "^3.8.3",
+    "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "@types/uuid": "^7.0.2",
     "cookie-parser": "^1.4.5",
