--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "phaser": "^3.22.0",
     "ts-loader": "^6.2.1",
     "uuid": "^7.0.2",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "ts-jest": "^25.2.1",
+    "jest": "^25.1.0"
   }
 }
