--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "prettier": "^1.19.1",
     "serve": "^11.3.0",
     "source-map-support": "^0.5.16",
-    "ts-jest": "^25.2.1",
-    "csvtojson": "^2.0.10"
+    "ts-jest": "^25.2.1"
   },
   "scripts": {
     "build": "webpack",
@@ -36,6 +35,7 @@
   "dependencies": {
     "@types/uuid": "^7.0.2",
     "@types/jest": "^25.1.4",
+    "csvtojson": "^2.0.10",
     "typescript": "^3.8.3",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
